fixing text align for movie title in header

--- a/app/components/ThumbGrid.css
+++ b/app/components/ThumbGrid.css
@@ -30,6 +30,7 @@
   font-weight: bold;
   color: #FFD3BF;
   letter-spacing: 0.3px;
+  text-align: right;
 }
 
 .timelineWrapper {
